--- a/index.html
+++ b/index.html
@@ -17,11 +17,52 @@
     <main class="main">
       <div class="container">
         <form action="" novalidate class="main__form">
-          <label class="main__label">
-            <input class="main__input" type="text" placeholder="Placeholder" />
-          </label>
+          <input class="main__input" type="text" placeholder="Placeholder" />
         </form>
-        <div class="main__content">rjvhvhhfhf  vvvvhf</div>
+        <section class="card_wr">
+          <div class="card">
+            <img class="card__img" src="./img/💯.png" alt="emoji" />
+            <p class="card__title">100</p>
+            <p class="card__keywords">
+              Hundred, points, symbol, wow, win, perfect, parties
+            </p>
+          </div>
+          <div class="card">
+            <img src="./img/💯.png" alt="emoji" />
+            <p class="card__title">100</p>
+            <p class="card__keywords">
+              Hundred, points, symbol, wow, win, perfect, parties
+            </p>
+          </div>
+          <div class="card">
+            <img src="./img/💯.png" alt="emoji" />
+            <p class="card__title">100</p>
+            <p class="card__keywords">
+              Hundred, points, symbol, wow, win, perfect, parties
+            </p>
+          </div>
+          <div class="card">
+            <img src="./img/💯.png" alt="emoji" />
+            <p class="card__title">100</p>
+            <p class="card__keywords">
+              Hundred, points, symbol, wow, win, perfect, parties
+            </p>
+          </div>
+          <div class="card">
+            <img src="./img/💯.png" alt="emoji" />
+            <p class="card__title">100</p>
+            <p class="card__keywords">
+              Hundred, points, symbol, wow, win, perfect, parties
+            </p>
+          </div>
+          <div class="card">
+            <img src="./img/💯.png" alt="emoji" />
+            <p class="card__title">100</p>
+            <p class="card__keywords">
+              Hundred, points, symbol, wow, win, perfect, parties
+            </p>
+          </div>
+        </section>
       </div>
     </main>
     <footer class="footer">
