fix: add event listener

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./index.js" defer></script>
+    <script src="./index.js" defer type="module"></script>
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Emoji</title>
   </head>
@@ -16,52 +16,13 @@
     </header>
     <main class="main">
       <div class="container">
-        <form action="" novalidate class="main__form">
-          <input class="main__input" type="text" placeholder="Placeholder" />
-        </form>
+        <input
+          class="main__input"
+          type="text"
+          placeholder="Search emoji"
+          id="input"
+        />
         <section class="card_wr">
-          <div class="card">
-            <img class="card__img" src="./img/💯.png" alt="emoji" />
-            <p class="card__title">100</p>
-            <p class="card__keywords">
-              Hundred, points, symbol, wow, win, perfect, parties
-            </p>
-          </div>
-          <div class="card">
-            <img src="./img/💯.png" alt="emoji" />
-            <p class="card__title">100</p>
-            <p class="card__keywords">
-              Hundred, points, symbol, wow, win, perfect, parties
-            </p>
-          </div>
-          <div class="card">
-            <img src="./img/💯.png" alt="emoji" />
-            <p class="card__title">100</p>
-            <p class="card__keywords">
-              Hundred, points, symbol, wow, win, perfect, parties
-            </p>
-          </div>
-          <div class="card">
-            <img src="./img/💯.png" alt="emoji" />
-            <p class="card__title">100</p>
-            <p class="card__keywords">
-              Hundred, points, symbol, wow, win, perfect, parties
-            </p>
-          </div>
-          <div class="card">
-            <img src="./img/💯.png" alt="emoji" />
-            <p class="card__title">100</p>
-            <p class="card__keywords">
-              Hundred, points, symbol, wow, win, perfect, parties
-            </p>
-          </div>
-          <div class="card">
-            <img src="./img/💯.png" alt="emoji" />
-            <p class="card__title">100</p>
-            <p class="card__keywords">
-              Hundred, points, symbol, wow, win, perfect, parties
-            </p>
-          </div>
         </section>
       </div>
     </main>
